# fatt

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  domains.txt  results.sqlite  rules.yaml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust-ci.yml  test.yml
cache/dns_cache/: db  snap.0000000000002A35  snap.000000000003223F
rule-examples/: admin-panels.yaml  api-endpoints.yaml  cloud-service-paths.yaml  common-paths.yaml  dangerous-defaults.yaml  database-paths.yaml  debug-endpoints.yaml  ecommerce-webapp-paths.yaml  graphql-endpoints.yaml  iot-embedded-paths.yaml  java-spring-paths.yaml  microsoft-paths.yaml
src/: config.rs  db.rs  distributed.rs  lib.rs  logger.rs  main.rs  resolver.rs  rules.rs  scanner.rs  utils.rs
tests/: config_test.rs  db_test.rs  resolver_test.rs  rules_test.rs  scanner_test.rs  test_helpers.rs  utils_test.rs
tests/common/: mod.rs
tests/data/rules/: test-rules.yaml
trust-dns-resolver/assert_fs/: .cargo-checksum.json  Cargo.toml
trust-dns-resolver/env_logger/: .cargo-checksum.json
