[package]
name = "fatt"
version = "0.1.0"
edition = "2021"
authors = ["copyleftdev", "FATT Development Team"]
description = "Find All The Things - A high-performance, distributed security scanning tool"
readme = "README.md"
repository = "https://github.com/copyleftdev/fatt"
license = "MIT"
keywords = ["security", "scanner", "web", "cli", "distributed"]
categories = ["command-line-utilities", "network-programming"]

# Make sure we expose the library for testing
[lib]
name = "fatt"
path = "src/lib.rs"

[[bin]]
name = "fatt"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full", "macros"] }

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }

# DNS resolver
trust-dns-resolver = "0.23.2"

# Database
rusqlite = { version = "0.34.0", features = ["bundled"] }
sled = "0.34"
csv = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0"
bincode = "2.0.0-rc.3"  # Updated to latest version

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Utilities
futures = "0.3"
indicatif = "0.17"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }  # Enable serde support
console = "0.15"
uuid = { version = "1.3", features = ["v4"] }
bytes = "1.4"
async-trait = "0.1"
once_cell = "1.15"
lazy_static = "1.4"
rand = "0.8"  # Added rand dependency

# These are needed for both normal code and tests
tempfile = "3.8"
wiremock = "0.5"

[dev-dependencies]
# Testing
mockito = "1.2"
test-log = { version = "0.2", features = ["trace"] }
tracing-test = "0.2"
assert_fs = "1.0"
predicates = "3.0"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
